scrollbar bug fixed

--- a/src/components/WindowWithCustomScrollbar/window-with-custom-scrollbar.scss
+++ b/src/components/WindowWithCustomScrollbar/window-with-custom-scrollbar.scss
@@ -40,7 +40,7 @@ $width: 0.5rem;
     position: absolute;
     background-color: pink;
     width: 1.3rem;
-    height: 2.5rem;
+    height: 6.5rem;
     top: -3px;
     left: -5px;
     border-radius: 100px;
